--- a/tiralabra/pom.xml
+++ b/tiralabra/pom.xml
@@ -55,6 +55,12 @@
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
                 <version>0.8.3</version>
+                <configuration>
+                    <excludes>
+                        <exclude>visualizer/ui/graphicalUI.java</exclude>
+                        <exclude>visualizer/performancetesting/PerformanceTesting.java</exclude>
+                    </excludes>
+                </configuration>
                 <executions>
                     <execution>
                         <goals>
